--- a/frontend/daofe/src/components/loaders/api-loader/ApiLoader.module.scss
+++ b/frontend/daofe/src/components/loaders/api-loader/ApiLoader.module.scss
@@ -2,6 +2,10 @@
 
 .loader {
   font-size: $fontSizeLarge;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%);
 
   &::after {
     content: '.';
