--- a/frontend/daofe/src/components/loaders/loader/Loader.module.scss
+++ b/frontend/daofe/src/components/loaders/loader/Loader.module.scss
@@ -1,7 +1,12 @@
 
 .loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%);
   display: flex;
   align-items: center;
+
 
   &::before,
   &::after {
